BUG 1379803: Fix editor sizing in IE7 * Phone editor input was spilling out in IE7 * Empty photo editor in IE7 was too tall * Also clipped long column names in reorderable lists
QA:
* Make sure bug is fixed

--- a/public/stylesheets/dataset-grid.css
+++ b/public/stylesheets/dataset-grid.css
@@ -623,7 +623,7 @@ div.blist-table-edit-container .blist-table-editor.type-url .description
 
 .blist-table-editor.type-phone
 {
-    overflow: visible;
+    overflow: hidden;
     padding-right: 0;
 }
 .blist-table .blist-table-edit-container input[type="text"].number
